--- a/css/main.css
+++ b/css/main.css
@@ -242,3 +242,150 @@ header{
 .imagen-pelicula:hover .hover-galeria{
     transform: scale(1);
 }
+
+.info{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 30%;
+    height: 660px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.259);
+    float: left;
+}
+
+.horarios{
+    margin-top: 40px;
+    margin-bottom: 8px;
+    width: 65%;
+    height: 60px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.259);
+    float: right;
+}
+
+.info img{
+    margin: 25px auto;
+    width: 85%;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+    display: block;
+}
+
+.datos{
+    margin: 25px auto;
+    width: 85%;
+    display: block;
+}
+
+.subtitulos{
+    display: block;
+    color: #985e6d;
+}
+
+.parrafo{
+    color: #9F9F9F;
+}
+
+.horarios-peliculas .horarios .dom,.lun,.mar,.mie,.jue,.vie,.sab{
+    display: inline-flex;
+    margin: 10px 10px;
+}
+
+.dias{
+    text-align: center;
+    font-size: 13px;
+}
+
+.peliculas-ver{
+    margin-bottom: 40px;
+    width: 65%;
+    height: 60px;
+    float: right;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+
+.imagen-pelicula-ver{
+    width: 23%;
+    margin-bottom: 10px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+.imagen-pelicula-ver > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.hover-galeria-ver{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    transform: scale(0);
+    background: #985e6d8d;
+    transition: transform .5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hover-galeria-ver img{
+    width: 50px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.hover-galeria-ver p{
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+}
+
+.imagen-pelicula-ver:hover .hover-galeria-ver{
+    transform: scale(1);
+}
+
+footer{
+    background: #D9D9D9;
+    width: 100%;
+    height: 250px;
+    margin-top: 160px;
+}
+
+footer .logo-footer img{
+    margin-top: 45px;
+    margin-left: 75px;
+    width: 20%;
+    float: left;
+}
+
+.social-redes{
+    float: right;
+    margin-top: 35px;
+    margin-right: 75px;
+}
+
+.informacion, .contactanos{
+    float: left;
+    margin-top: 50px;
+    margin-left: 130px;
+    font-size: 18px;
+}
+
+footer .logo-footer, .informacion, .contactanos, .social-redes{
+    display: inline;
+}
+
+footer .social-redes .fb,.ig,.tw{
+    display: block;
+}
+
+.fb,.ig,.tw{
+    width: 175%;
+    margin-top: 25px;
+}
